--- a/css/__footer.scss
+++ b/css/__footer.scss
@@ -9,48 +9,48 @@ $ff-2: "Josefin Sans", sans-serif;
 
 .footer {
   background-color: black;
+  width: 100%;
 
-  .footer__logo {
-    padding: 4rem 0 2rem 0;
+  .footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-  }
-
-  .footer__nav {
-    nav {
-      ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1.5rem;
-        padding-bottom: 4rem;
-
-        li {
-          list-style-type: none;
-          color: $white;
+    .footer__left {
+      .logo {
+        display: block;
+        width: 80%;
+        margin: 4rem auto 2rem auto;
+      }
+      nav {
+        ul {
           font-family: $ff-1;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 1.5rem;
+          margin-bottom: 2rem;
         }
       }
     }
-  }
 
-  .footer__social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
+    .footer__right {
+      text-align: center;
 
-  .copyright {
-    color: $veryDarkGray;
-    text-align: center;
-    font-family: $ff-1;
-    padding: 1rem 0 4rem 0;
+      .footer__icons {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        max-width: 60%;
+        margin: 1.5rem auto;
+      }
+
+      .copyright {
+        color: $veryDarkGray;
+        font-family: $ff-1;
+      }
+    }
   }
 }
