--- a/css/__media-1440.scss
+++ b/css/__media-1440.scss
@@ -18,8 +18,6 @@
       ),
       url(/images/desktop/image-hero.jpg);
 
-    background-size: 100%;
-
     .open-nav {
       display: none;
     }
@@ -52,7 +50,6 @@
         margin-left: 10.5rem;
 
         h1 {
-          width: 100%;
           font-size: 4rem;
           margin: 0;
           padding: 2rem;
@@ -110,18 +107,35 @@
   }
 
   .creations {
-    .see__all-btn {
-      display: none;
+    .see__all-m {
+      .see__all-btn {
+        display: none;
+      }
     }
+
     .creations__header {
       display: flex;
       align-items: center;
       justify-content: space-between;
       max-width: 80%;
       margin: auto;
+      .see__all-d {
+        padding-bottom: 3rem;
+        .see__all-btn {
+          display: block;
+          padding: 0.5rem 2.5rem;
+          text-transform: uppercase;
+          letter-spacing: 5px;
+          background-color: transparent;
+          font-size: 1rem;
+          font-family: $ff-1;
+          transition: 0.2s ease;
 
-      .see__all-btn {
-        display: block;
+          &:hover {
+            background: black;
+            color: $white;
+          }
+        }
       }
     }
 
@@ -130,7 +144,6 @@
     }
 
     section {
-      display: grid;
       grid-template-columns: repeat(4, 0.5fr);
       max-width: 80%;
       margin: auto;
@@ -150,7 +163,6 @@
           rgba(0, 0, 0, 0) 0%,
           rgba(0, 0, 0, 0.6) 100%
         );
-        position: relative;
 
         .deep__earth-m,
         .night__arcade-m,
@@ -170,6 +182,56 @@
           left: 2rem;
         }
       }
+    }
+  }
+
+  .footer {
+    .footer__container {
+      flex-direction: row;
+      align-items: start;
+      justify-content: space-between;
+      max-width: 78%;
+      margin: auto;
+      padding: 2rem 0;
+
+      .footer__left {
+        text-align: left;
+        .logo {
+          width: 50%;
+          margin: 0;
+          text-align: left;
+          padding-bottom: 2rem;
+        }
+        nav {
+          ul {
+            flex-direction: row;
+            margin-bottom: 2rem;
+            text-align: right;
+          }
+        }
+      }
+
+      .footer__right {
+        .footer__icons {
+          display: flex;
+          align-items: center;
+          text-align: right;
+          max-width: 50%;
+          margin: 0 0 0 auto;
+          padding-bottom: 2rem;
+          gap: 1rem;
+        }
+
+        .copyright {
+          color: $veryDarkGray;
+          font-family: $ff-1;
+        }
+      }
+    }
+  }
+  body {
+    .attribution {
+      padding: 0;
     }
   }
 }
