--- a/css/main.scss
+++ b/css/main.scss
@@ -31,3 +31,14 @@ h6 {
   padding: 0;
   box-sizing: border-box;
 }
+
+.attribution {
+  font-size: 0.7rem;
+  text-align: center;
+  color: hsl(0, 0%, 50%);
+  padding: 2rem 0;
+  background-color: black;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
